--- a/composer.json
+++ b/composer.json
@@ -6,6 +6,11 @@
             "email": "71873082+robin-arbona@users.noreply.github.com"
         }
     ],
+    "autoload": {
+        "psr-4": {
+            "App\\": "entity/"
+        }
+    },
     "require-dev": {
         "phpunit/phpunit": "^9.5"
     }
