--- a/composer.json
+++ b/composer.json
@@ -13,5 +13,8 @@
     },
     "require-dev": {
         "phpunit/phpunit": "^9.5"
+    },
+    "require": {
+        "stripe/stripe-php": "^7.75"
     }
 }
